# src-project-fastAPI-blog

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 50f8e8c514e8_posts_fts_gin_index.py  ab54301953f5_init_tables.py  fb5a8b6a5f6f_posts_model_tweaks.py
src/app/: celery_app.py  db.py  main.py
src/app/core/: s3.py  security.py  settings.py
src/app/middleware/: auth.py
src/app/models/: __init__.py  category.py  post.py  user.py
src/app/repositories/: categories.py  posts.py  users.py
src/app/routers/: auth.py  categories.py  posts.py  root.py  uploads.py
src/app/schemas/: category.py  post.py  user.py
src/app/services/: auth.py  categories.py  posts.py
src/app/tasks/: email.py
tests/: conftest.py  test_auth_guard.py  test_categories.py  test_posts.py  test_root.py  test_uploads.py
