[project]
name = "src-project-fastapi-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry",email = "kopdevile@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "aiosmtplib (>=4.0.2,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "boto3 (>=1.40.45,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
pre-commit = "^4.3.0"
pytest = "^8.4.2"
httpx = "^0.28.1"
alembic = "^1.16.5"

[tool.poetry]
package-mode = false
packages = [{ include = "app", from = "src" }]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E402", "E501"]
